--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,12 @@
 * Rename 'inline' computation to just 'computation' in fble.txt?
  - And emphasize that computation is deferred and can be rerun multiple times.
 
+* Add test that we check the kind namespace of union fields like we do for
+  struct fields.
+
+* Anyway we can share code converting {inline,}{struct, union} type
+  expressions into types? They do almost the same thing.
+
 * Proof of concept fblf
  - Implement N bit addition, run on evaluator and compile via llvm to c code
    and run.
