--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 * Rename 'inline' computation to just 'computation' in fble.txt?
  - And emphasize that computation is deferred and can be rerun multiple times.
 
-* Add test that we check the kind namespace of union fields like we do for
+* Fix test that we check the kind namespace of union fields like we do for
   struct fields.
 
 * Anyway we can share code converting {inline,}{struct, union} type
