--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,7 @@
 
+* Add FBLE_INLINE_STRUCT_ACCESS_TC and FBLE_INLINE_UNION_ACCESS_TC
+* Define FBLE_INLINE_LET_EXPR and add parser support
+
 * Rename 4.3-union-access/basic/* tests, because they seem to have wrong
   names?
 
@@ -11,7 +14,7 @@
    and run.
 
 * Consider adding STRUCT vs UNION and INLINE vs NONINLINE fields to
-  FbleDataType and FbleDataTypeExpr to distinguish between struct and union
+  FbleDataType and FbleDataTypeTC to distinguish between struct and union
   inline and non inline types rather than with the type tag.
 
 * Follow style guide in fble.txt
