Add experimental symbolic elaboration to fble spec.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
 
-* Remove all inline support.
-* Figure out next attempt at fblf implementation.
+* Test and implement symbolic elaboration
+ - Starting with whatever we need to get 64 bit addition working.
+* Implement a symbolic value compiler and figure out how to evaluate its
+  performance.
 
 * Rename 4.3-union-access/basic/* tests, because they seem to have wrong
   names?
